project_data/logs/redis__hiredis-819_20250606_140127/attempt_3/docker_test_heredoc.log
=== METHOD: HEREDOC ===
=== AI PATCH PREVIEW ===
diff --git a/read.c b/read.c
index abc1234..def5678 100644
--- a/read.c
+++ b/read.c
@@ -35,6 +35,7 @@
 #include "read.h"
 #include "sds.h"
 #include "win32.h"
+#include "hiredis.h"
 


=== TEST EXECUTION ===
patching file read.c
Hunk #1 succeeded at 45 (offset 10 lines).
Hunk #2 succeeded at 563 with fuzz 1 (offset 101 lines).
Hunk #3 succeeded at 591 (offset 101 lines).
fix_run.sh: line 8: RUN: command not found
cc -std=c99 -pedantic -c -O3 -fPIC   -Wall -W -Wstrict-prototypes -Wwrite-strings -Wno-missing-field-initializers -g -ggdb read.c
read.c: In function 'processItem':
read.c:566:18: error: expected expression before '>' token
  566 |             case >:
      |                  ^
read.c:566:18: error: expected expression before '>' token
make: *** [Makefile:219: read.o] Error 1
